spade-tests/src/snapshots/spade_tests__wordlength_inference__if_conditions_are_visited_ia.snap
---
source: spade-tests/src/wordlength_inference.rs
---
struct X { x: int<4>, }

fn f(a: X) -> int<4> {
  let p = a.x;
  if 0 == trunc(p + 1) {
    0
  } else {
    0
  }
}

entity main(clk: clock, rst: bool) -> int<4> {
  f( X$( x: 0 ) )
}


error: Type of expression is not fully known
  ┌─ testinput:5:6
  │
5 │   if 0 == trunc(p + 1) {
  │      ^ The type of this expression is not fully known
  │
  = note: Found incomplete type: int<_>


